--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 //non-liner
 //Good Design
 //random presure
+// 240-360は確認済み，このプログラムも確認済み，デバック用を消せば実装可能，他のやつにコピペしようね
 
 int scene = 1;
 
@@ -87,6 +88,7 @@ void draw() {
     nextScene();
 
     break;
+    
   case 3:
     size(700, 130);
     background(255);
@@ -97,8 +99,8 @@ void draw() {
     text("ご協力ありがとうございます．", width/2, height/4+30);
     text("このページを閉じずに，残したまま，", width/2, height/4+60);
     text("アンケートフォームにお戻りください．", width/2, height/4+90);
-    println(count_answer);
-    println(count_time);
+    //println(count_answer);
+    //println(count_time);
     noLoop();
     document.getElementById('presure_area').innerHTML = "タイプ："+play_presure;
     document.getElementById('answer_area').innerHTML = "回答数："+count_answer;
@@ -114,7 +116,7 @@ void timer() {
       time = millis() - base_time;
       time = time/1000;
       trust_time = time;
-      //text("true_time:"+int(time), width/2, height/2-20);
+      //text("true_time:"+int(time), width/2, height/2+10);
       if (time < 240) {
         f = 1;
         time = time * 3/2;
@@ -141,7 +143,7 @@ void timer() {
     time = millis() - base_time;
     time = time/1000;
     trust_time = time;
-    //text("true_time:"+int(time), width/2, height/2-20);
+    //text("true_time:"+int(time), width/2, height/2+10);
     if (time < 360) {
       f = 1;
       time = time * 2/3;
@@ -150,7 +152,6 @@ void timer() {
     } else if (time >= 360) {
       f = 2;
       if (base_timeA == 0) {
-
         base_timeA = millis();
       }
       time2 = millis() - base_timeA;
@@ -158,7 +159,7 @@ void timer() {
 
       time2 = time2 * 3/2;
       time2 = time2 + 240;
-      //text("fast_time:"+int(t), width/2, height/2);
+      //text("fast_time:"+int(time), width/2, height/2);
       //text("slow", width/2, height/2-200);
     }
   }
