--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ void draw() {
     textAlign(CENTER);
     text("Enterキーを押すとスタート", width/2, height/2);
     play_presure = presureList[presure_selecter];
-    text(play_presure,width/2,height/4);
+    //text(play_presure,width/2,height/4);
 
     break;
 
