--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         }
 
         function makeNonliner(s) {
-            if (selected_presure == "High") {
+            if (selected_presure == "HP") {
                 if (second < 240) {
                     second = second * 3 / 2;
                 } else if (second >= 240) {
                     second = 360 + t * 2 / 3;
                     t += 1;
                 }
-            } else if (selected_presure == "Low") {
+            } else if (selected_presure == "LP") {
                 if (second < 360) {
                     second = second * 2 / 3;
                 } else if (second >= 360) {
